--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>موکب عماد</title>
+    <title>موکب عماد مغنیه</title>
     <style>
         * {
             margin: 0;
@@ -224,7 +224,7 @@
         <div class="logo-section">
             <div class="logo"></div>
             <div class="header-text">
-                <h1>موکب عماد</h1>
+                <h1>موکب عماد مغنیه</h1>
                 <p>رسانه های اجتماعی ما</p>
             </div>
         </div>
@@ -258,7 +258,7 @@
 
         <div class="contact-info">
             <h3>درباره ما</h3>
-            <p>این صفحه موکب عماد می باشد</p>
+            <p>این صفحه موکب عماد مغنیه می باشد</p>
         </div>
     </div>
 
