--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>موکب گروه جهادی شهید عماد مغنیه</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         * {
             margin: 0;
@@ -247,6 +248,7 @@
                 </a>
                 
                 <a href="https://zaya.link/telegramMokebEmadMoghniye" target="_blank" class="social-btn website">
+                    <i class="fab fa-telegram-plane"></i>
                     تلگرام
                 </a>
                 
@@ -267,7 +269,7 @@
     </div>
 
     <footer class="footer">
-        <p>© 2025 - تمامی حقوق این سایت متعلق به ابا عبدالله الحسین است</p>
+        <p>© 2025 - تمامی حقوق این سایت متعلق به ابا عبدالله الحسین می باشد</p>
     </footer>
 </body>
 </html>
