--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
         }
 
         .logo {
-            width: 80px;
-            height: 80px;
+            width: 150px;
+            height: 150px;
             background-image: url('logo.png');
             background-size: cover;
             background-position: center;
@@ -240,17 +240,17 @@
                     <i class="fas fa-comments"></i>
                     ایتا
                 </a>
-                 <a href="https://zaya.link/baleMokebEmadMoghniye" target="_blank" class="social-btn telegram">
-                     <i class="fas fa-paper-plane"></i>
+                 <a href="https://zaya.link/baleMokebEmadMoghniye" target="_blank" class="social-btn website">
+                     <i class="fas fa-comments"></i>
                      بله
                 </a>
                 
-                <a href="https://zaya.link/instagramMokebEmadMoghniye" target="_blank" class="social-btn aparat">
+                <a href="https://zaya.link/instagramMokebEmadMoghniye" target="_blank" class="social-btn instagram">
                     <i class="fab fa-instagram"></i>
                     اینستاگرام
                 </a>
                 
-                <a href="https://zaya.link/telegramMokebEmadMoghniye" target="_blank" class="social-btn website">
+                <a href="https://zaya.link/telegramMokebEmadMoghniye" target="_blank" class="social-btn telegram">
                     <i class="fab fa-telegram-plane"></i>
                     تلگرام
                 </a>
@@ -260,7 +260,7 @@
                   واتس اپ
                 </a>
 
-                <a href="https://zaya.link/aparatMokebEmadMoghniye" target="_blank" class="social-btn instagram">
+                <a href="https://zaya.link/aparatMokebEmadMoghniye" target="_blank" class="social-btn aparat">
                     <i class="fas fa-play-circle"></i>
                   آپارات
                 </a>
