--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         .logo {
             width: 150px;
             height: 150px;
-            background-image: url('logo.png');
+            background-image: url('logo2.png');
             background-size: cover;
             background-position: center;
             border-radius: 50%;
@@ -174,9 +174,9 @@
         }
 
         .telegram { border-left: 4px solid #0088cc; }
-        .aparat { border-left: 4px solid #ff6b35; }
-        .website { border-left: 4px solid #27ae60; }
-        .instagram { border-left: 4px solid #e1306c; }
+        .aparat { border-left: 4px solid #e1306c; }
+        .website { border-left: 4px solid #ffff00; }
+        .instagram { border-left: 4px solid #ff6666; }
 
         .telegram:hover { background: linear-gradient(45deg, #0088cc, #00aaff); color: white; }
         .aparat:hover { background: linear-gradient(45deg, #ff6b35, #ff8c42); color: white; }
