--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>موکب گروه جهادی شهید عماد مغنیه</title>
+    <title>2موکب گروه جهادی شهید عماد مغنیه</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         * {
@@ -255,7 +255,7 @@
                     تلگرام
                 </a>
                 
-                <a href="https://zaya.link/whatsappMokebEmadMoghniye" target="_blank" class="social-btn instagram">
+                <a href="https://zaya.link/whatsappMokebEmadMoghniye" target="_blank" class="social-btn website">
                     <i class="fab fa-whatsapp"></i>
                   واتس اپ
                 </a>
