--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>2موکب گروه جهادی شهید عماد مغنیه</title>
+    <title>3موکب گروه جهادی شهید عماد مغنیه</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         * {
@@ -58,7 +58,7 @@
         .logo {
             width: 150px;
             height: 150px;
-            background-image: url('logo2.png');
+            background-image: url('logo3.png');
             background-size: cover;
             background-position: center;
             border-radius: 50%;
@@ -175,7 +175,7 @@
 
         .telegram { border-left: 4px solid #0088cc; }
         .aparat { border-left: 4px solid #e1306c; }
-        .website { border-left: 4px solid #ffff00; }
+        .website { border-left: 4px solid #e1306c; }
         .instagram { border-left: 4px solid #ff6666; }
 
         .telegram:hover { background: linear-gradient(45deg, #0088cc, #00aaff); color: white; }
@@ -236,7 +236,7 @@
         
         <div class="links-container">
             <div class="social-links">
-                <a href="https://zaya.link/eitaaMokebEmadMoghniye" target="_blank" class="social-btn telegram">
+                <a href="https://zaya.link/eitaaMokebEmadMoghniye" target="_blank" class="social-btn website">
                     <i class="fas fa-comments"></i>
                     ایتا
                 </a>
