--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>3موکب گروه جهادی شهید عماد مغنیه</title>
+    <title>4موکب گروه جهادی شهید عماد مغنیه</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         * {
@@ -58,7 +58,7 @@
         .logo {
             width: 150px;
             height: 150px;
-            background-image: url('logo3.png');
+            background-image: url('logo4.png');
             background-size: cover;
             background-position: center;
             border-radius: 50%;
@@ -180,7 +180,7 @@
 
         .telegram:hover { background: linear-gradient(45deg, #0088cc, #00aaff); color: white; }
         .aparat:hover { background: linear-gradient(45deg, #ff6b35, #ff8c42); color: white; }
-        .website:hover { background: linear-gradient(45deg, #27ae60, #2ecc71); color: white; }
+        .website:hover { background: linear-gradient(45deg, #ff9900, #ffa31a); color: white; }
         .instagram:hover { background: linear-gradient(45deg, #e1306c, #fd79a8); color: white; }
 
         .contact-info {
