--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
     </div>
 
     <footer class="footer">
-        <p>© 2025 - .تمامی حقوق این سایت متعلق به ابا عبدالله الحسین می باشد</p>
+        <p>© 2025 - تمامی حقوق این سایت متعلق به ابا عبدالله الحسین می باشد</p>
     </footer>
 </body>
 </html>
