--- a/index.html
+++ b/index.html
@@ -273,12 +273,12 @@
 
         <div class="contact-info">
             <h3>درباره ما</h3>
-            <p>موکب شهید عماد مغنیه قصد دارد در اربعین ۱۴۰۴به عاشقان اباعبدالحسین خدمات فرهنگی پذیرایی ارائه اینترنت رایگان ارائه تماس رایگان با ایران و... ارائه دهد</p>
+            <p>موکب شهید عماد مغنیه قصد دارد در اربعین ۱۴۰۴به عاشقان اباعبدالله الحسین خدمات فرهنگی، پذیرایی، ارائه اینترنت رایگان و همچنین ارائه تماس رایگان با ایران و... ارائه دهد</p>
         </div>
     </div>
 
     <footer class="footer">
-        <p>© 2025 - تمامی حقوق این سایت متعلق به ابا عبدالله الحسین می باشد</p>
+        <p>© 2025 - تمامی حقوق این سایت متعلق به اباعبدالله الحسین می باشد</p>
     </footer>
 </body>
 </html>
