--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         .logo {
             width: 150px;
             height: 150px;
-            background-image: url('logo4.png');
+            background-image: url('logo.png');
             background-size: cover;
             background-position: center;
             border-radius: 50%;
