--- a/index.html
+++ b/index.html
@@ -175,15 +175,15 @@
         }
 
         .telegram { border-left: 4px solid #0088cc; }
-        .aparat { border-left: 4px solid #e1306c; }
+        .instagram { border-left: 4px solid #e1306c; }
         .eitaa { border-left: 4px solid #e1306c; }
-        .instagram { border-left: 4px solid #ff6666; }
+        .aparat { border-left: 4px solid #ff6666; }
         .bale { border-left: 4px solid #e1306c; }
         
         .telegram:hover { background: linear-gradient(45deg, #0088cc, #00aaff); color: white; }
-        .aparat:hover { background: linear-gradient(45deg, #ff9900, #ff66b3); color: white; }
+        .instagram:hover { background: linear-gradient(45deg, #ff9900, #ff66b3); color: white; }
         .eitaa:hover { background: linear-gradient(45deg, #ff9900, #ffa31a); color: white; }
-        .instagram:hover { background: linear-gradient(45deg, #e1306c, #fd79a8); color: white; }
+        .aparat:hover { background: linear-gradient(45deg, #e1306c, #fd79a8); color: white; }
         .bale:hover { background: linear-gradient(45deg, #009900, #00cc00); color: white; }
 
         .contact-info {
